[package]
name = "cavif"
description = "Encodes images in AVIF format (image2avif converter) using a pure-Rust encoder."
version = "1.5.3"
authors = ["Kornel Lesiński <kornel@geekhood.net>"]
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["avif", "png2avif", "jpeg2avif", "convert", "av1"]
categories = ["command-line-utilities", "multimedia::images", "multimedia::encoding"]
homepage = "https://lib.rs/cavif"
repository = "https://github.com/kornelski/cavif-rs"
include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs"]
rust-version = "1.64"

[dependencies]
ravif = { version = "0.11.2", path = "./ravif", default-features = false }
rayon = "1.7.0"
rgb = "0.8.36"
cocoa_image = { version = "1.0.5", optional = true }
imgref = "1.9.4"
clap = { version = "4.2.7", default-features = false, features = ["color", "suggestions", "wrap_help", "std", "cargo"] }
load_image = "3.0.3"

[features]
default = ["asm", "static"]
asm = ["ravif/asm"]
static = ["load_image/lcms2-static"]

[profile.dev]
opt-level = 1
debug = 1

[profile.release]
opt-level = 3
panic = "abort"
debug = false
lto = true
strip = true

[profile.dev.package."*"]
opt-level = 2

[dev-dependencies]
avif-parse = "1.0.0"

[badges]
maintenance = { status = "actively-developed" }

[workspace]
members = ["ravif"]
