[package]
name = "cavif"
description = "Encodes images in AVIF format (image2avif converter) using a pure-Rust encoder."
version = "1.5.7"
authors = ["Kornel Lesiński <kornel@geekhood.net>"]
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["avif", "png2avif", "jpeg2avif", "convert", "av1"]
categories = ["command-line-utilities", "multimedia::images", "multimedia::encoding"]
homepage = "https://lib.rs/crates/cavif"
repository = "https://github.com/kornelski/cavif-rs"
include = ["README.md", "LICENSE", "/src/*.rs"]
rust-version = "1.70"

[dependencies]
ravif = { version = "0.11.12", path = "./ravif", default-features = false, features = ["threading"] }
rayon = "1.10.0"
rgb = { version = "0.8.50", default-features = false }
cocoa_image = { version = "1.0.7", optional = true }
imgref = "1.11.0"
clap = { version = "4.4.18", default-features = false, features = ["color", "suggestions", "wrap_help", "std", "cargo"] }
load_image = "3.0.3"

[features]
default = ["asm", "static"]
asm = ["ravif/asm"]
static = ["load_image/lcms2-static"]

[profile.dev]
opt-level = 1
debug = 1

[profile.release]
opt-level = 3
panic = "abort"
debug = false
lto = true
strip = true

[profile.dev.package."*"]
opt-level = 2

[dev-dependencies]
avif-parse = "1.3.2"

[badges]
maintenance = { status = "actively-developed" }

[workspace]
members = ["ravif"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
