[package]
name = "ravif"
description = "rav1e-based pure Rust library for encoding images in AVIF format (powers the `cavif` tool)"
version = "0.11.3"
authors = ["Kornel Lesiński <kornel@geekhood.net>"]
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["avif", "convert", "av1", "rav1f", "cav1f"]
categories = ["multimedia::images", "multimedia::encoding"]
homepage = "https://lib.rs/ravif"
repository = "https://github.com/kornelski/cavif-rs"
include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs"]

[dependencies]
avif-serialize = "0.8.1"
rav1e = { version = "0.6.6", default-features = false, features = ["threading"] }
rayon = "1.7.0"
rgb = "0.8.36"
imgref = "1.9.4"
loop9 = "0.1.3"
quick-error = "2.0.1"

[target.'cfg(target = "wasm32-unknown-unknown")'.dependencies]
rav1e = { version = "0.6", default-features = false, features = ["wasm"] }

[features]
default = ["asm"]
asm = ["rav1e/asm"]

[profile.release]
lto = true

[profile.dev.package."*"]
debug = false
opt-level = 2

[dev-dependencies]
avif-parse = "1.0.0"

[package.metadata.release]
tag = false
